# backend_template

./: .buildpacks  .gitignore  Procfile  app.json  pyproject.toml
backend/: settings.py  urls.py
schema/: views.py
schema/templates/: csrf.html
