[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vladimir Trifonov <3fonov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
whitenoise = "^6.2.0"
requests = "^2.28.1"
django-cors-headers = "^3.13.0"
graphene-django = "^3.0.0"
django-webpack-loader = "^1.7.0"
django-graphql-ratelimit = "^1.0.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
uvicorn = "^0.19.0"
psycopg2 = "^2.9.5"
django-environ = "^0.9.0"
graphene = ">=3.0"
black = "^22.12.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
